--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <p>Hey，我是<strong>Aiah</strong>，一名在读博士生，主要研究text summarizaiton。</p>
+    <p>Hey，我是<strong>Aiah</strong>，一名在读博士生，主要研究方向为NLP。</p>
 
     <p>I'm studying...</p>
 </div>
