--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <p>Hey，我是<strong>Aiah</strong>，一名在读博士生，主要研究方向为NLP。</p>
+    <p>Hey，我是<strong>Aiah</strong>，一只NLP科研狗。</p>
 
-    <p>I'm studying...</p>
+    <p>Still studying...</p>
 </div>
 
 <!-- English Version -->
